--- a/mixx-frontend/src/pages/Login.css
+++ b/mixx-frontend/src/pages/Login.css
@@ -92,6 +92,17 @@
   padding: 8px;
   font-size: 14px;
 }
+.login input[type="button"] {
+  margin-top: 10px;
+  background: #0744c6;
+  color: #fff;
+  border: none;
+  outline: none;
+  width: 100%;
+  border-radius: 100px;
+  padding: 8px;
+  font-size: 14px;
+}
 
 .social-login {
   padding-left: 30px;
