login and signup

--- a/mixx-frontend/src/pages/Login.css
+++ b/mixx-frontend/src/pages/Login.css
@@ -72,6 +72,7 @@
   width: 350px;
   /* padding: 50px; */
   padding: 50px 50px 0px 50px;
+  padding-top: 30px;
   color: #fff;
 }
 
@@ -187,7 +188,7 @@
 }
 
 .footer {
-  margin-top: 20px;
+  margin-top: 30px;
   color: #a8a8a8;
   font-size: 0.75rem;
 }
