--- a/mixx-frontend/src/components/Menu.css
+++ b/mixx-frontend/src/components/Menu.css
@@ -1,4 +1,4 @@
-ion-menu ion-content {
+/* ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
 
@@ -17,7 +17,8 @@ ion-menu.md ion-note {
   margin-bottom: 30px;
 }
 
-ion-menu.md ion-list-header, ion-menu.md ion-note {
+ion-menu.md ion-list-header,
+ion-menu.md ion-note {
   padding-left: 10px;
 }
 
@@ -110,4 +111,10 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
-} 
+} */
+
+.navbar {
+  width: 90px;
+  height: 100vh;
+  transition: 0.2s linear;
+}
