--- a/mixx-frontend/src/pages/Home.css
+++ b/mixx-frontend/src/pages/Home.css
@@ -1,10 +1,77 @@
 .container1 {
-    background-image: url("./../Assets/bg.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    width: 100%;
-    height: 100vh;
-    display: flex;
+  background-image: url("./../Assets/bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.select {
+  width: 290px;
+  height: 65px;
+  border-radius: 35px;
+  margin: 10px 0px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 25px;
+  font-size: 1.1rem;
+}
+
+.main .convert {
+  background-color: #0744c6;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+/* ---------------------------------------------------------------- */
+.dropdown {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 290px;
+  color: #fff;
+  border-radius: 50px;
+  padding-bottom: 40px;
+}
+.dropdown .dropdown-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 25px;
+  font-size: 1.1rem;
+}
+
+.dropdown .dropdown-list {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
+  padding: 5px 25px;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.dropdown .dropdown-icon {
+  margin-right: 10px;
+}
+
+.dropdown .dropdown-list-audio {
+  cursor: pointer;
+  justify-content: center;
+  margin-left: 0px;
 }
