--- a/mixx-frontend/src/components/Menu.css
+++ b/mixx-frontend/src/components/Menu.css
@@ -47,6 +47,9 @@ nav li {
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 40px;
+  /* height: 40px; */
 }
 
 .nav-title {
@@ -56,12 +59,16 @@ nav li {
 }
 
 nav .icon {
-  color: #0744c6 !important;
+  color: #0744c6;
   cursor: pointer;
 }
 
 .sidebar-open {
   width: 150px;
+}
+
+.sidebar-open li {
+  width: 120px;
 }
 
 .sidebar-open .nav-title {
@@ -87,4 +94,52 @@ nav .icon {
 
 .menuLink {
   color: transparent;
+}
+
+.logout {
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  position: absolute;
+  border-radius: 50%;
+  margin-left: 15px;
+  top: 77vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: #0744c6;
+}
+
+.logout span {
+  display: none;
+}
+
+.sidebar-open .logout {
+  width: 100px;
+  border-radius: 25px;
+}
+.sidebar-open .logout span {
+  display: inline;
+  margin-left: -20px;
+  margin-top: 1px;
+  font-weight: bold;
+}
+
+.active {
+  background-color: #0744c6;
+  border-radius: 50%;
+  height: 50px;
+  margin: 10px 0px;
+}
+
+.active .icon {
+  color: #fff;
+}
+
+.sidebar-open .active {
+  border-radius: 50px;
+}
+
+.active .nav-title {
+  color: #fff;
 }
