--- a/mixx-frontend/src/pages/Register.css
+++ b/mixx-frontend/src/pages/Register.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.container {
+.register-container {
   background-image: url("./../Assets/bg.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -39,7 +39,7 @@
   padding-left: 30px;
 }
 
-.register .left-box .line {
+.register .left-box .title-underline {
   height: 5px;
   width: 85px;
   background-color: #0744c6;
@@ -55,7 +55,7 @@
   position: relative;
 }
 
-.register .img1 {
+.register .music-symbol {
   position: absolute;
   top: -30px;
   left: -10px;
@@ -198,4 +198,18 @@
   color: #fff;
   font-weight: bold;
   cursor: pointer;
+}
+
+@media (max-width: 750px) {
+  .register .box {
+    flex-direction: column;
+  }
+  .register .left-box {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 30px;
+  }
+  .register .footer {
+    margin-bottom: 20px;
+  }
 }
