--- a/mixx-frontend/src/components/Menu.css
+++ b/mixx-frontend/src/components/Menu.css
@@ -1,145 +1,128 @@
-.sidebar {
-  margin-top: 70px;
-  margin-bottom: 70px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 80px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-top-right-radius: 100px;
-  border-bottom-right-radius: 100px;
-}
-
-.sidebar-top {
-  width: 40px;
-  height: 40px;
-  background-color: #636363;
+.sidebar{
   position: absolute;
-  margin-top: 30px;
-  margin-left: 20px;
-  border-radius: 50%;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.5);
+box-shadow: -4px -4px 36px rgba(0, 0, 0, 0.2), 4px 4px 48px rgba(0, 0, 0, 0.2), inset 0px 8px 32px rgba(0, 0, 0, 0.16);
+border-radius: 0px 45px 45px 0px;
+transition: 0.5s;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+z-index: 100;
 }
 
-.sidebar-top-icon {
-  position: absolute;
-  margin-top: 39px;
-  margin-left: 59px;
-  cursor: pointer;
+.sidebar-open{
+  width: 200px;
 }
 
-.sidebar-top-icon-open {
-  position: absolute;
-  margin-top: 39px;
-  margin-left: 59px;
-  cursor: pointer;
-}
-
-nav {
-  width: 100%;
-  height: 100%;
+.topWrapper{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+.sidebar .navTop{
+  justify-content: flex-end;
   align-items: center;
+  margin-top: 2rem;
+  height: 100px;
 }
 
-nav li {
-  padding: 20px 0px;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  /* height: 40px; */
-}
-
-.nav-title {
-  display: none;
-  color: #707070;
-  cursor: pointer;
-}
-
-nav .icon {
-  color: #0744c6;
-  cursor: pointer;
-}
-
-.sidebar-open {
-  width: 150px;
-}
-
-.sidebar-open li {
-  width: 120px;
-}
-
-.sidebar-open .nav-title {
-  display: inline;
-  margin-left: 7px;
-}
-
-.sidebar-open .sidebar-top {
-  width: 70px;
-  height: 70px;
-  margin-left: 40px;
-}
-
-.sidebar-open .sidebar-top-icon {
-  margin-top: 45px;
-  margin-left: 125px;
-}
-
-.sidebar-open .sidebar-top-icon-open {
-  margin-top: 50px;
-  margin-left: 115px;
-}
-
-.menuLink {
-  color: transparent;
-}
-
-.logout {
-  width: 40px;
-  height: 40px;
-  background-color: #ffffff;
-  position: absolute;
-  border-radius: 50%;
-  margin-left: 15px;
-  top: 77vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  color: #0744c6;
-}
-
-.logout span {
-  display: none;
-}
-
-.sidebar-open .logout {
+.avatar-open{
+  height: 100px;
   width: 100px;
-  border-radius: 25px;
+  border-radius: 100%;
+  border: 1px solid black;
 }
-.sidebar-open .logout span {
-  display: inline;
-  margin-left: -20px;
-  margin-top: 1px;
-  font-weight: bold;
-}
-
-.active {
-  background-color: #0744c6;
-  border-radius: 50%;
-  height: 50px;
-  margin: 10px 0px;
+.avatar-close{
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: 1px solid black;
 }
 
-.active .icon {
+.navMiddle{
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.menuLink{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.menuLink-open{
+  justify-content: flex-start;
+  padding: 0 1rem;
+}
+
+.menuLink div{
+  padding: 0.75rem 1rem; 
+  border-radius: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* width: 100%; */
+}
+
+
+
+.menuLink .nav-title{
+  margin: 0 2rem 0 1.25rem;
+}
+
+.menuLink .icon{
+  color: #0744C6;
+}
+
+.menuLink .nav-title{
+  color: #707070;
+}
+
+.active{
+  background-color: #0744C6;
+  color: #fff!important;
+  transform: scale(1.1);
+}
+
+.active .icon{
   color: #fff;
 }
 
-.sidebar-open .active {
-  border-radius: 50px;
+.active .nav-title{
+  color: #fff;
 }
 
-.active .nav-title {
-  color: #fff;
+.navBottom{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logout{
+  background: #FFFFFF;
+box-shadow: -4px -4px 36px rgba(0, 0, 0, 0.2), 4px 4px 48px rgba(0, 0, 0, 0.2), inset 0px 8px 32px rgba(0, 0, 0, 0.16);
+border-radius: 50px;
+margin: 2rem 0;
+width: max-content;
+padding: 1rem;
+color: #000;
+display: flex;
+flex-direction: row;
+align-items: center;
+cursor: pointer;
+}
+
+.logout span{
+  margin-left: 0.5rem;
+}
+
+.closeArrow{
+  margin-right: 10px;
+}
+
+.arrowWrapper{
+  cursor: pointer;
 }
