--- a/mixx-frontend/src/pages/Home.css
+++ b/mixx-frontend/src/pages/Home.css
@@ -96,3 +96,11 @@
   font-weight: 700;
   font-size: 20px;
 }
+
+.menu{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  height: 30px;
+  cursor: pointer;
+}
