--- a/mixx-frontend/src/pages/Files.css
+++ b/mixx-frontend/src/pages/Files.css
@@ -1,102 +1,58 @@
-/* body {
-  background: #c2aec5;
-  color: white;
-} */
-
-.App {
-  font-family: sans-serif;
-  text-align: center;
+.filePage {
+  background-image: url("./../Assets/bg1.svg");
 }
 
-button {
-  background: rgb(7, 68, 198);
-  color: white;
-  border: none;
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  outline: none;
-  text-transform: uppercase;
-  transition: all 0.2s ease;
+.filePageContent {
+  /* --background-image: url("./../Assets/bg1.svg"); */
+  --background: none !important;
 }
 
-button:hover {
-  background: #0744c6;
-}
-
-.playlist {
-  text-align: left;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.playlist-item {
-  color: #444;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  padding: 1em;
-}
-
-.playlist-item.selected {
-  font-weight: bold;
-}
-
-.playlist-item:hover {
-  background: rgba(0, 0, 0, 0.1);
-}
-
-.controls {
-  text-align: left;
-  padding: 1em;
-}
-
-.waveform {
-  background-image: linear-gradient(#4286f4, #373b44);
-}
-
-.waveform-container {
-  display: flex;
+.searchbarBorder {
   justify-content: center;
-  flex-direction: column;
-  margin-left: 5vw;
+
 }
 
-.waveform .header {
-  display: flex;
-  justify-content: space-between;
+.searchBar1 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  width: 60%;
+  --background: #575757;
+  --border-radius: 25px;
+  --color: white;
+  box-shadow: -4px -4px 36px rgb(0 0 0 / 20%), 4px 4px 36px rgb(0 0 0 / 20%), inset 0px 8px 36px rgb(0 0 0 / 16%);
+
 }
 
-.waveform .header > div {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  font-weight: bold;
+@media (min-width:1300px) {
+  .searchBar1 {
+    width: 70%;
+  }
+
+  .fileTop {
+    width: 70% !important;
+  }
 }
 
-.waveform .info {
-  height: 40px;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-  margin-top: 5px;
+.fileTop {
+  margin-bottom: 10px;
+  width: 60%;
+  --background: rgba(255, 255, 255, 0.5);
+  border-radius: 25px;
+  --color:
+    #0744C6;
+  font-weight: 700;
+  box-shadow: -4px -4px 36px rgb(0 0 0 / 20%), 4px 4px 36px rgb(0 0 0 / 20%), inset 0px 8px 36px rgb(0 0 0 / 16%);
 }
 
-.waveform .comments {
-  margin-top: 30px;
+.fileDetails {
+  background: rgba(217, 217, 217, 0.4);
+  font-weight: 500;
+  font-size: 1rem;
+  min-height: 75vh;
 }
 
-.waveform .title {
-  font-size: 1.1rem;
-  margin-left: 5px;
-  /* margin-top: -5px; */
-}
-
-.badge {
-  display: flex;
-  align-items: center;
-  width: 85px;
-  justify-content: space-around;
-  background-color: #0744c6;
-  margin-right: 10px;
-  padding: 6px 4px;
-  font-size: 0.8rem;
-  border-radius: 10px;
+.fileValue {
+  margin-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px dashed black;
 }
