--- a/mixx-frontend/src/pages/Login.css
+++ b/mixx-frontend/src/pages/Login.css
@@ -81,12 +81,15 @@
   color: #fff;
   font-weight: bold;
 }
+
 .login .right-box .line {
   height: 3px;
   width: 65px;
+
   background-color: #fff;
   margin-left: 92px;
   margin-top: 1px;
+  margin-bottom: 20px;
 }
 
 .login .form {
@@ -128,8 +131,8 @@
   color: #fff;
 }
 
-.login .form .inputBox input:focus ~ label,
-.login .form .inputBox input:valid ~ label {
+.login .form .inputBox input:focus~label,
+.login .form .inputBox input:valid~label {
   top: -20px;
   left: 0;
   color: #fff;
@@ -160,6 +163,7 @@
   width: 100px;
   background-color: #e7e7e7;
 }
+
 .login .divider .right {
   height: 1px;
   width: 100px;
@@ -192,6 +196,7 @@
   color: #a8a8a8;
   font-size: 0.75rem;
 }
+
 .login .footer span {
   color: #fff;
   font-weight: bold;
@@ -202,11 +207,13 @@
   .login .box {
     flex-direction: column;
   }
+
   .login .left-box {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 0px;
     border-top-right-radius: 30px;
   }
+
   .login .footer {
     margin-bottom: 20px;
   }
