--- a/mixx-frontend/src/pages/Play.css
+++ b/mixx-frontend/src/pages/Play.css
@@ -4,99 +4,102 @@
 } */
 
 .App {
-    font-family: sans-serif;
-    text-align: center;
+  font-family: sans-serif;
+  text-align: center;
 }
 
 button {
-    background: rgb(7, 68, 198);
-    color: white;
-    border: none;
-    width: 60px;
-    height: 60px;
-    border-radius: 100%;
-    outline: none;
-    text-transform: uppercase;
-    transition: all 0.2s ease;
+  background: rgb(7, 68, 198);
+  color: white;
+  border: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  outline: none;
+  text-transform: uppercase;
+  transition: all 0.2s ease;
 }
 
 button:hover {
-    background: #0744c6;
+  background: #0744c6;
 }
 
 .playlist {
-    text-align: left;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
+  text-align: left;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .playlist-item {
-    color: #444;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    padding: 1em;
+  color: #444;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  padding: 1em;
 }
 
 .playlist-item.selected {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .playlist-item:hover {
-    background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .controls {
-    text-align: left;
-    padding: 1em;
+  text-align: left;
+  padding: 1em;
 }
 
 .waveform {
-    background-image: linear-gradient(#4286f4, #373b44);
+  /* background-image: linear-gradient(#4286f4, #373b44); */
+  background-image: url("./../Assets/bg1.svg");
 }
 
 .waveform-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-left: 5vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* margin-left: 5vw; */
+  margin: auto;
+  width: 85vw;
 }
 
 .waveform .header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-.waveform .header>div {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    font-weight: bold;
+.waveform .header > div {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
 }
 
 .waveform .info {
-    height: 40px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
-    margin-top: 5px;
+  height: 40px;
+  background-color: #d9d9d9;
+  border-radius: 10px;
+  margin-top: 5px;
 }
 
 .waveform .comments {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .waveform .title {
-    font-size: 1.1rem;
-    margin-left: 5px;
-    /* margin-top: -5px; */
+  font-size: 1.1rem;
+  margin-left: 5px;
+  /* margin-top: -5px; */
 }
 
 .badge {
-    display: flex;
-    align-items: center;
-    width: 85px;
-    justify-content: space-around;
-    background-color: #0744c6;
-    margin-right: 10px;
-    padding: 6px 4px;
-    font-size: 0.8rem;
-    border-radius: 10px;
+  display: flex;
+  align-items: center;
+  width: 85px;
+  justify-content: space-around;
+  background-color: #0744c6;
+  margin-right: 10px;
+  padding: 6px 4px;
+  font-size: 0.8rem;
+  border-radius: 10px;
 }
