--- a/mixx-frontend/src/pages/Home.css
+++ b/mixx-frontend/src/pages/Home.css
@@ -32,6 +32,20 @@
   font-size: 1.1rem;
 }
 
+.select_file {
+  width: 290px;
+  height: 65px;
+  border-radius: 35px;
+  margin: 10px 0px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 25px;
+  font-size: 1.1rem;
+}
+
 .main .convert {
   background-color: #0744c6;
   font-weight: bold;
@@ -97,7 +111,7 @@
   font-size: 20px;
 }
 
-.menu{
+.menu {
   position: absolute;
   top: 10px;
   left: 10px;
