--- a/mixx-frontend/src/pages/Login.css
+++ b/mixx-frontend/src/pages/Login.css
@@ -129,10 +129,11 @@
   top: 20px;
   right: 0;
   color: #fff;
+  cursor: pointer;
 }
 
-.login .form .inputBox input:focus~label,
-.login .form .inputBox input:valid~label {
+.login .form .inputBox input:focus ~ label,
+.login .form .inputBox input:valid ~ label {
   top: -20px;
   left: 0;
   color: #fff;
