--- a/mixx-frontend/src/pages/Register.css
+++ b/mixx-frontend/src/pages/Register.css
@@ -128,10 +128,11 @@
   top: 20px;
   right: 0;
   color: #fff;
+  cursor: pointer;
 }
 
-.register .form .inputBox input:focus~label,
-.register .form .inputBox input:valid~label {
+.register .form .inputBox input:focus ~ label,
+.register .form .inputBox input:valid ~ label {
   top: -20px;
   left: 0;
   color: #fff;
