--- a/mixx-frontend/src/pages/Register.css
+++ b/mixx-frontend/src/pages/Register.css
@@ -132,7 +132,7 @@
 }
 
 .register .form .inputBox input:focus ~ label,
-.register .form .inputBox input:valid ~ label {
+.register .form .inputBox input:not(:placeholder-shown) ~ label {
   top: -20px;
   left: 0;
   color: #fff;
