--- a/mixx-frontend/src/pages/Home.css
+++ b/mixx-frontend/src/pages/Home.css
@@ -118,3 +118,10 @@
   height: 30px;
   cursor: pointer;
 }
+
+.numberInput input[type=number]::-webkit-inner-spin-button,
+.numberInput input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
