--- a/mixx-frontend/src/pages/Home.css
+++ b/mixx-frontend/src/pages/Home.css
@@ -5,7 +5,8 @@
   background-attachment: fixed;
   background-position: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
+  overflow-y: scroll;
   display: flex;
 }
 
