--- a/mixx-frontend/src/pages/Play.css
+++ b/mixx-frontend/src/pages/Play.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.scrollFix {
+  --background: transparent;
+}
+
 button {
   background: rgb(7, 68, 198);
   color: white;
@@ -68,7 +72,7 @@ button:hover {
   justify-content: space-between;
 }
 
-.waveform .header > div {
+.waveform .header>div {
   color: #fff;
   display: flex;
   align-items: center;
@@ -76,6 +80,10 @@ button:hover {
 }
 
 .waveform .info {
+  display: flex;
+  align-items: center;
+  color: #0744C6;
+  padding-left: 10px;
   height: 40px;
   background-color: #d9d9d9;
   border-radius: 10px;
