--- a/mixx-frontend/src/components/Menu.css
+++ b/mixx-frontend/src/components/Menu.css
@@ -1,5 +1,5 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   height: 100vh;
   background: rgba(255, 255, 255, 0.5);
   box-shadow: -4px -4px 36px rgba(0, 0, 0, 0.2), 4px 4px 48px rgba(0, 0, 0, 0.2),
